# diplom

./: .gitignore  README.md  analyze_spore2.py  analyze_spore2_v2.py  check_current_json.py  check_links.py  debug_spore_2.py  generate_csv_matrix_fixed.py  prompt.md  run_watcher.bat  talk.ipynb  tatus --porcelain  test_valence.py  test_valence_manager.py  test_valence_simple.py
spores/: README.md  pyproject.toml
spores/0/: invert.py  simple_algorithm_comparison.py  spore.py
spores/1/: start.py  watcher.py
spores/10/: README.md
spores/4/: colors.json
spores/5/: colors.json
spores/7/: colors.json
spores/8/: README.md
spores/9_stable/: README.md
spores/v12/: README.md
spores/v13_manual/: requirements.txt
spores/v14_back/: README.md  requirements.txt
spores/v15_5_tree_opt/: README_link_length_feature.md  final_optimization_report.py  simple_manual_test.py  simple_test.py  test_area_optimization_integration.py  test_config_integration.py  test_distance_fix.py  test_dt_subscription_id_diagnostic.py  test_dt_subscription_logging.py  test_improved_dt_scaling.py  test_none_result_fix.py  test_pair_distances_output.py  test_quick_info.py  test_sign_fix.py
spores/v15_tree/: README.md  __main__.py  test_spore_manager_integration.py
spores/v16_picker/: README.md  README_complete_implementation.md  README_dt_subscription.md  README_step2_area_optimization.md  debug_buffer_graph.py  demo_optimization_info.py  find_null_bytes.py  pairing_config_summary.py  requirements.txt  simple_zoom_test.py  test_apply_optimized_dt.py  test_area_optimization_imports.py  (+20 more)
(+495 files in other folders)
